--- a/root/pug/_modules/header.pug
+++ b/root/pug/_modules/header.pug
@@ -16,9 +16,9 @@ header.c-header#header
         li.nav-menu_item
           a(href="#") Contact
         li.nav-menu_item.nav-menu_item__phone
-          a(href="tel:713-985-9944") 713-985-9944  
-        li.nav-menu_item.nav-menu_item__phone
-          a(href="tel:713-985-9944") Nhận Tư vấn 
+          a(href="tel:713-985-9944") 713-985-9944
+        li.nav-menu_item.nav-menu_item__phone.not-before
+          a(href="tel:713-985-9944") Nhận Tư vấn
       .nav-menu_mobile(onclick="toggleMenu()")
         svg#open(width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg')
           path(d='M2 6C2 5.44772 2.44772 5 3 5H21C21.5523 5 22 5.44772 22 6C22 6.55228 21.5523 7 21 7H3C2.44772 7 2 6.55228 2 6Z' fill='currentColor')
