--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -40,9 +40,7 @@ block after_page
 
 block container
   .swiper
-    // Additional required wrapper
     .swiper-wrapper
-      // Slides
       .swiper-slide
         .swiper-image(style="background: url('https://www.specialized.com/medias/03-ROAD-3212-Hero-2800x1620.jpg?context=bWFzdGVyfGltYWdlc3w2OTkyMTN8aW1hZ2UvanBlZ3xpbWFnZXMvaGJhL2g5Yi85MTMxMDkzODUyMTkwLmpwZ3xjMDI3ZWM3OGVhMzZmMjY3NDcxYzg4OTQxNmM5YTFhMDU3OGY5MmQxOWRkMTcyMWQzZjYxNjFmMmI5NTdjOGU4') no-repeat right bottom; background-size:cover;")
         .overlay
@@ -70,11 +68,34 @@ block container
             p
               | You’re looking at the fastest XC bikes in the world. Building on the legacy of the winningest full suspension XC bike in history, these freshly redesigned Epics deliver an unmatched combination of pedaling efficiency, light weight and control.
             a.button(href='') Đăng Ký Tư Vấn
-    // If we need pagination
     .swiper-pagination
-    // If we need navigation buttons
     .swiper-nav-wrapper
       .swiper-button-prev
       .swiper-button-next
-    // If we need scrollbar
     .swiper-scrollbar
+  .l-container
+    .c-message
+      .c-message_inner
+        p We are a group of professional estate planners and insurance specialists. We are passionate about helping you build generational
+    .c-solution
+      .c-solution_inner
+        h3 Our Solution
+        ul
+          li
+            .c-solution_tag Bảo Hiểm Đầu Tư
+            .c-solution_name Hành Trình Hạnh Phúc
+            .c-solution_icon
+              img(src=path+"assets/images/crop.png")
+            .c-solution_extra Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống
+          li
+            .c-solution_tag Bảo Hiểm Đầu Tư
+            .c-solution_name Hành Trình Hạnh Phúc
+            .c-solution_icon
+              img(src=path+"assets/images/crop.png")
+            .c-solution_extra Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống
+          li
+            .c-solution_tag Bảo Hiểm Đầu Tư
+            .c-solution_name Hành Trình Hạnh Phúc
+            .c-solution_icon
+              img(src=path+"assets/images/crop.png")
+            .c-solution_extra Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống
