--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -99,3 +99,7 @@ block container
             .c-solution_icon
               img(src=path+"assets/images/crop.png")
             .c-solution_extra Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống
+    .c-button
+      a.c-button_inner.bounceIn(href="#")
+          p Bạn có muốn làm chủ tương lai?
+          p Đừng ngần ngại tìm hiểu cùng Jolie!
