--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -103,3 +103,22 @@ block container
       a.c-button_inner.bounceIn(href="#")
           p Bạn có muốn làm chủ tương lai?
           p Đừng ngần ngại tìm hiểu cùng Jolie!
+    .c-trust 
+        h3 Có 1000+ khách hàng đã lựa chọn đồng hành cùng Jolie, bởi vì:
+        p  had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no   
+        ul 
+         li 
+          .c-trust_icon 
+            img(src=path+"assets/images/crop.png")
+          h3 Compare Quotes  
+          p Compare life insurance quotes with no obligation to buy.
+         li 
+          .c-trust_icon 
+            img(src=path+"assets/images/crop.png")
+          h3 Compare Quotes  
+          p Compare life insurance quotes with no obligation to buy.
+         li 
+          .c-trust_icon 
+            img(src=path+"assets/images/crop.png")
+          h3 Compare Quotes  
+          p Compare life insurance quotes with no obligation to buy.                  
