--- a/root/scss/0_base/_mixin.scss
+++ b/root/scss/0_base/_mixin.scss
@@ -64,3 +64,8 @@
 	display: flex;
 	justify-content: space-between;
 }
+@mixin ttl3 {
+	width: 100%;
+    text-align: center;
+    font-size: 4rem;
+}
