--- a/root/scss/2_component/_09_other.scss
+++ b/root/scss/2_component/_09_other.scss
@@ -3,7 +3,7 @@
 ------------------------------------------------------------*/
 .c-message{
 	@include flex-center;
-	margin: 3rem 0;
+	margin: 5rem 0;
 	&_inner{
 		padding: 2rem 8%;
 		border-radius: 15px;
@@ -20,21 +20,18 @@
 	}
 }
 .c-solution{
-	margin: 3rem 0;
+	margin: 5rem 0;
 	&_inner{
 		h3{
-			width: 100%;
-			text-align: center;
-			font-size: 4rem;
-
+			@include ttl3;
 		}
 		ul{
-			@include flex-jbetween;
+			@include flex-center;
 			flex-wrap: wrap;
 			li{
-				width: 30%;
+				width: 28%;
 				padding: 30px 20px;
-				margin: 3rem 0;
+				margin: 3rem 2.5%;
 				background-color: #fff;
 				border: solid 1px #ededed;
 				@include sp{
@@ -85,7 +82,47 @@
 		}
 	}
 }
-
+.c-trust{
+	margin: 5rem 0;
+	text-align: center;
+	h3{
+		@include ttl3;
+	}
+	p{
+		max-width: 900px;
+		margin: 0 auto;
+	}
+	ul {
+		@include flex-center;
+		flex-wrap: wrap;
+		margin: 4rem 0;
+		@include sp{
+			margin:  4rem -15px;
+		}
+		li{
+			width: 25%;
+			margin: 15px;
+			@include sp{
+				width: 50%;
+				margin: 15px 0;
+				padding: 10px;
+			}
+			h3{
+				font-size: 2.5rem;
+			}
+			p{
+				margin-top: 15px;
+				font-size: 1.5rem;
+				line-height: 1.5;
+			}
+		}
+	}
+	&_icon{
+		width: 60px;
+		height: 60px;
+		margin: 2rem auto;
+	}
+}
 @keyframes pulse_animation {
 	0% { transform: scale(1); }
 	30% { transform: scale(1); }
