--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -121,4 +121,11 @@ block container
           .c-trust_icon 
             img(src=path+"assets/images/crop.png")
           h3 Compare Quotes  
-          p Compare life insurance quotes with no obligation to buy.                  
+          p Compare life insurance quotes with no obligation to buy.         
+    .c-boss 
+      .c-boss_img 
+        img(src="https://api.lorem.space/image/movie?w=400&h=500", alt="")   
+      .c-boss_content 
+        h3 Giới Thiệu 
+        p JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life. With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of life insurance. From college funding, retirement saving plan, income protection to living benefits, what life insurance can do is not only to protect you and your loved one during the toughest moment but also to improve significantly the quality of life while you are still living.
+            
