--- a/root/scss/2_component/_09_other.scss
+++ b/root/scss/2_component/_09_other.scss
@@ -123,6 +123,23 @@
 		margin: 2rem auto;
 	}
 }
+.c-boss{
+	@include flex-center;
+	align-items: flex-start;
+	margin: 4rem auto;
+	max-width: 80vw;
+	&_img{
+		width: 50%;
+		text-align: center;
+		img{
+			width: fit-content;
+		}
+	}
+	&_content{
+		width: 50%;
+		padding: 5%;
+	}
+}
 @keyframes pulse_animation {
 	0% { transform: scale(1); }
 	30% { transform: scale(1); }
