--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -85,47 +85,64 @@ block container
             .c-solution_tag Bảo Hiểm Đầu Tư
             .c-solution_name Hành Trình Hạnh Phúc
             .c-solution_icon
-              img(src=path+"assets/images/crop.png")
+              img.lazy(data-src=path+"assets/images/crop.png")
             .c-solution_extra Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống
           li
             .c-solution_tag Bảo Hiểm Đầu Tư
             .c-solution_name Hành Trình Hạnh Phúc
             .c-solution_icon
-              img(src=path+"assets/images/crop.png")
+              img.lazy(data-src=path+"assets/images/crop.png")
             .c-solution_extra Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống
           li
             .c-solution_tag Bảo Hiểm Đầu Tư
             .c-solution_name Hành Trình Hạnh Phúc
             .c-solution_icon
-              img(src=path+"assets/images/crop.png")
+              img.lazy(data-src=path+"assets/images/crop.png")
             .c-solution_extra Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống
     .c-button
       a.c-button_inner.bounceIn(href="#")
           p Bạn có muốn làm chủ tương lai?
           p Đừng ngần ngại tìm hiểu cùng Jolie!
-    .c-trust 
+    .c-trust
         h3 Có 1000+ khách hàng đã lựa chọn đồng hành cùng Jolie, bởi vì:
-        p  had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no   
-        ul 
-         li 
-          .c-trust_icon 
-            img(src=path+"assets/images/crop.png")
-          h3 Compare Quotes  
+        p  had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no
+        ul
+         li
+          .c-trust_icon
+            img.lazy(data-src=path+"assets/images/crop.png")
+          h3 Compare Quotes
           p Compare life insurance quotes with no obligation to buy.
-         li 
-          .c-trust_icon 
-            img(src=path+"assets/images/crop.png")
-          h3 Compare Quotes  
+         li
+          .c-trust_icon
+            img.lazy(data-src=path+"assets/images/crop.png")
+          h3 Compare Quotes
           p Compare life insurance quotes with no obligation to buy.
-         li 
-          .c-trust_icon 
-            img(src=path+"assets/images/crop.png")
-          h3 Compare Quotes  
-          p Compare life insurance quotes with no obligation to buy.         
-    .c-boss 
-      .c-boss_img 
-        img(src="https://api.lorem.space/image/movie?w=400&h=500", alt="")   
-      .c-boss_content 
-        h3 Giới Thiệu 
+         li
+          .c-trust_icon
+            img.lazy(data-src=path+"assets/images/crop.png")
+          h3 Compare Quotes
+          p Compare life insurance quotes with no obligation to buy.
+    .c-boss
+      .c-boss_img
+        img.lazy(data-src="https://api.lorem.space/image/fashion?w=400&h=500", alt="")
+      .c-boss_content
+        h3 Giới Thiệu
         p JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life. With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of life insurance. From college funding, retirement saving plan, income protection to living benefits, what life insurance can do is not only to protect you and your loved one during the toughest moment but also to improve significantly the quality of life while you are still living.
-            
+      ul
+        li
+            img.lazy(data-src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+        li
+            img.lazy(data-src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+        li
+            img.lazy(data-src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+        li
+            img.lazy(data-src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+    .c-video
+        h3 Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?
+        ul
+          li
+            iframe(src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+          li
+            iframe(src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+
+
