--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -8,11 +8,12 @@ block vars
   -path         = ''
 block before_page
   link(rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css")
+  //link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js")
 block after_page
   script(src="https://unpkg.com/swiper@8/swiper-bundle.min.js")
+  //script(src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer")
   script.
     const swiper = new Swiper(".swiper", {
-      // Optional parameters
       direction: "horizontal",
       loop: true,
       effect: "fade",
@@ -20,59 +21,60 @@ block after_page
         crossFade: true
       },
       speed: 400,
-
-      // If we need pagination
-      /*pagination: {
-        el: '.swiper-pagination',
-      },*/
-
-      // Navigation arrows
       navigation: {
         nextEl: ".swiper-button-next",
         prevEl: ".swiper-button-prev"
       }
-
-      // And if we need scrollbar
-      /*scrollbar: {
-        el: '.swiper-scrollbar',
-      },*/
     });
-
+    //- const Userswiper = new Swiper(".user-slider", {
+    //-   direction: "horizontal",
+    //-   //- loop: true,
+    //-   //- effect: "fade",
+    //-   //- fadeEffect: {
+    //-   //-   crossFade: true
+    //-   //- },
+    //-   //- speed: 400,
+    //-   //- navigation: {
+    //-   //-   nextEl: ".swiper-button-next",
+    //-   //-   prevEl: ".swiper-button-prev"
+    //-   //- }
+    //- });
 block container
-  .swiper
-    .swiper-wrapper
-      .swiper-slide
-        .swiper-image(style="background: url('https://www.specialized.com/medias/03-ROAD-3212-Hero-2800x1620.jpg?context=bWFzdGVyfGltYWdlc3w2OTkyMTN8aW1hZ2UvanBlZ3xpbWFnZXMvaGJhL2g5Yi85MTMxMDkzODUyMTkwLmpwZ3xjMDI3ZWM3OGVhMzZmMjY3NDcxYzg4OTQxNmM5YTFhMDU3OGY5MmQxOWRkMTcyMWQzZjYxNjFmMmI5NTdjOGU4') no-repeat right bottom; background-size:cover;")
-        .overlay
-        .content-wrapper
-          .content
-            h1 THE ULTIMATE GETAWAY VEHICLE
-            p
-              | With speed, control, and confidence on any terrain, Diverge is the most capable gravel bike ever made. Switching from Midwest gravel at Mach 5 to rutted single track with ease, nothing helps you escape faster than Diverge.
-            a.button(href='') Đăng Ký Tư Vấn
-      .swiper-slide
-        .swiper-image(style="background: url('https://www.specialized.com/medias/07-ROAD-3300-TarmacStory-Hero-Handling-2800x1620.jpg?context=bWFzdGVyfGltYWdlc3w3MTc5NDN8aW1hZ2UvanBlZ3xpbWFnZXMvaDBmL2g4Yi85MTc1MzM1NTAxODU0LmpwZ3w0MDc5MjI3Y2QyMGFkMjVmN2NjMzVkN2U1YzJkNmE3N2Y0YWQ0ODIxNjVkYjhjODg1OGFjMjUzNGQxYjQ3ZTg2') no-repeat center center; background-size:cover;")
-        .overlay
-        .content-wrapper.content-right
-          .content
-            h1 ONE BIKE TO RULE THEM ALL
-            p
-              | Morph Sagan’s superhuman speed with Alaphilippe’s climbing power and you’ve got the Tarmac SL7. The bike that knows no compromise. Climb on the lightest bike the rules allow, sprint on the fastest – all with legendary Tarmac handling. The only choice you need to make is when to attack.
-            a.button(href='') Đăng Ký Tư Vấn
-      .swiper-slide
-        .swiper-image(style="background: url('	https://www.specialized.com/medias/10-MTB-2197-EvoCarousel-2880x1620-01.jpg?context=bWFzdGVyfGltYWdlc3w5OTM3Mzd8aW1hZ2UvanBlZ3xpbWFnZXMvaGMxL2g4Zi85MTU2MTg5NDg3MTM0LmpwZ3w4OTBmZmI4OGNiNjYyNDNjOTA0MTJkYmUwNjhlOTE5MWZkOWMyMTNiMGYyMzZhMDM3YWVkOTA3ZmFmYmY0ZWRm') no-repeat right center; background-size:cover;")
-        .overlay
-        .content-wrapper
-          .content
-            h1 THINK FASTEST
-            p
-              | You’re looking at the fastest XC bikes in the world. Building on the legacy of the winningest full suspension XC bike in history, these freshly redesigned Epics deliver an unmatched combination of pedaling efficiency, light weight and control.
-            a.button(href='') Đăng Ký Tư Vấn
-    .swiper-pagination
-    .swiper-nav-wrapper
-      .swiper-button-prev
-      .swiper-button-next
-    .swiper-scrollbar
+  .c-swiper
+    .swiper
+      .swiper-wrapper
+        .swiper-slide
+          .swiper-image(style="background: url('https://www.specialized.com/medias/03-ROAD-3212-Hero-2800x1620.jpg?context=bWFzdGVyfGltYWdlc3w2OTkyMTN8aW1hZ2UvanBlZ3xpbWFnZXMvaGJhL2g5Yi85MTMxMDkzODUyMTkwLmpwZ3xjMDI3ZWM3OGVhMzZmMjY3NDcxYzg4OTQxNmM5YTFhMDU3OGY5MmQxOWRkMTcyMWQzZjYxNjFmMmI5NTdjOGU4') no-repeat right bottom; background-size:cover;")
+          .overlay
+          .content-wrapper
+            .content
+              h1 THE ULTIMATE GETAWAY VEHICLE
+              p
+                | With speed, control, and confidence on any terrain, Diverge is the most capable gravel bike ever made. Switching from Midwest gravel at Mach 5 to rutted single track with ease, nothing helps you escape faster than Diverge.
+              a.button(href='') Đăng Ký Tư Vấn
+        .swiper-slide
+          .swiper-image(style="background: url('https://www.specialized.com/medias/07-ROAD-3300-TarmacStory-Hero-Handling-2800x1620.jpg?context=bWFzdGVyfGltYWdlc3w3MTc5NDN8aW1hZ2UvanBlZ3xpbWFnZXMvaDBmL2g4Yi85MTc1MzM1NTAxODU0LmpwZ3w0MDc5MjI3Y2QyMGFkMjVmN2NjMzVkN2U1YzJkNmE3N2Y0YWQ0ODIxNjVkYjhjODg1OGFjMjUzNGQxYjQ3ZTg2') no-repeat center center; background-size:cover;")
+          .overlay
+          .content-wrapper.content-right
+            .content
+              h1 ONE BIKE TO RULE THEM ALL
+              p
+                | Morph Sagan’s superhuman speed with Alaphilippe’s climbing power and you’ve got the Tarmac SL7. The bike that knows no compromise. Climb on the lightest bike the rules allow, sprint on the fastest – all with legendary Tarmac handling. The only choice you need to make is when to attack.
+              a.button(href='') Đăng Ký Tư Vấn
+        .swiper-slide
+          .swiper-image(style="background: url('	https://www.specialized.com/medias/10-MTB-2197-EvoCarousel-2880x1620-01.jpg?context=bWFzdGVyfGltYWdlc3w5OTM3Mzd8aW1hZ2UvanBlZ3xpbWFnZXMvaGMxL2g4Zi85MTU2MTg5NDg3MTM0LmpwZ3w4OTBmZmI4OGNiNjYyNDNjOTA0MTJkYmUwNjhlOTE5MWZkOWMyMTNiMGYyMzZhMDM3YWVkOTA3ZmFmYmY0ZWRm') no-repeat right center; background-size:cover;")
+          .overlay
+          .content-wrapper
+            .content
+              h1 THINK FASTEST
+              p
+                | You’re looking at the fastest XC bikes in the world. Building on the legacy of the winningest full suspension XC bike in history, these freshly redesigned Epics deliver an unmatched combination of pedaling efficiency, light weight and control.
+              a.button(href='') Đăng Ký Tư Vấn
+      .swiper-pagination
+      .swiper-nav-wrapper
+        .swiper-button-prev
+        .swiper-button-next
+      .swiper-scrollbar
   .l-container
     .c-message
       .c-message_inner
@@ -144,5 +146,29 @@ block container
             iframe(src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
           li
             iframe(src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+    .c-user
+      h3 Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?
+      .c-user_inner
+        .c-user_list.user-slider
+          .c-user_item
+            .c-user_img
+                img(src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
+            h4 Diễn viên hài
+            p  To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.
+          .c-user_item
+            .c-user_img
+                img(src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
+            h4 Diễn viên hài
+            p  To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.
+          .c-user_item
+            .c-user_img
+                img(src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
+            h4 Diễn viên hài
+            p  To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.
+          .c-user_item
+            .c-user_img
+                img(src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
+            h4 Diễn viên hài
+            p  To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.
 
 
