--- a/root/scss/2_component/_09_other.scss
+++ b/root/scss/2_component/_09_other.scss
@@ -223,9 +223,10 @@
 	}
 	&_list{
 		@include flex-center;
+		flex-wrap: wrap;
 	}
 	&_item{
-		 width: 25%;
+		width: 25%;
 		padding: 20px 30px;
 		text-align: center;
 		h4{
@@ -236,6 +237,9 @@
 		p{
 			font-size: 1.5rem;
 			font-weight: 400;
+		}
+		@include sp{
+			width: 100%;
 		}
 	}
 	&_img{
