--- a/root/scss/1_layout/_footer.scss
+++ b/root/scss/1_layout/_footer.scss
@@ -2,59 +2,36 @@
 	Footer
 ------------------------------------------------------------*/
 .c-footer {
+	margin: 3rem 0;
 	width: 100%;
-	padding: 100px 0 150px;
 	text-align: center;
-	background: #AFA6A6;
-	color: black;
+	color: #999;
+	font-weight: 400;
+	p{
+		line-height: 1.7;
+		font-size: 1.5rem;
+		margin-bottom: 2.5rem;
+	}
 	@include sp{
 		padding: 50px 0;
 	}
 	.l-container{
-		@include flex-jbetween;
-		flex-wrap: wrap;
-		text-align: left;
-		font-weight: 700;
+		@include flex-center;
+	}
+	&__btn{
+		@include flex-center;
+		margin: 2rem 0;
 		a{
-			color: black;
-			text-decoration: none;
-			font-size: 1.8rem;
-		}
-		dl{
-			width: 25%;
-			padding: 0 25px;
-			@include sp{
-				width: 100%;
-				margin: 10px 0;
-				padding: 0;
-			}
-		}
-		dt{
-			font-size: 2.5rem;
-			margin-bottom: 1.5rem;
-			@include sp{
-				margin-bottom: 0.5rem;
-			}
-		}
-		dd{
-			font-weight: 400;
-			font-size: 1.8rem;
+			color: #01395e;
+			font-weight: 500;
+			font-size: 1.7rem;
+			padding: 10px;
 		}
 	}
-	&_social{
-		@include flex;
-		width: 100% !important;
-		padding: 15px 0 !important;
-		@include sp{
-			margin-top: 0;
-			padding: 3px 0 0 !important;
-		}
-		dd{
-			padding-right: 18px;
-			img{
-				width: 28px;
-				height: 28px;
-			}
+	&__copyright {
+		p{
+			font-size: 1.6rem;
+			font-weight: 500;
 		}
 	}
 }
