--- a/root/scss/2_component/_09_other.scss
+++ b/root/scss/2_component/_09_other.scss
@@ -256,6 +256,22 @@
 		display: block;
 	}
 }
+.c-contact {
+	ul{
+		@include flex-center;
+		align-items: flex-start;
+		li{
+			width: 50%;
+			padding: 0 5%;
+			h3{
+				@include ttl3;
+			}
+			@include sp{
+				width: 100%;
+			}
+		}
+	}
+}
 @keyframes pulse_animation {
 	0% { transform: scale(1); }
 	30% { transform: scale(1); }
