--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -44,32 +44,24 @@ block container
     .swiper
       .swiper-wrapper
         .swiper-slide
-          .swiper-image(style="background: url('https://www.specialized.com/medias/03-ROAD-3212-Hero-2800x1620.jpg?context=bWFzdGVyfGltYWdlc3w2OTkyMTN8aW1hZ2UvanBlZ3xpbWFnZXMvaGJhL2g5Yi85MTMxMDkzODUyMTkwLmpwZ3xjMDI3ZWM3OGVhMzZmMjY3NDcxYzg4OTQxNmM5YTFhMDU3OGY5MmQxOWRkMTcyMWQzZjYxNjFmMmI5NTdjOGU4') no-repeat right bottom; background-size:cover;")
+          .swiper-image(style="background: url(../assets/images/banner01.png) no-repeat right bottom; background-size:cover;")
           .overlay
           .content-wrapper
             .content
               h1 THE ULTIMATE GETAWAY VEHICLE
               p
                 | With speed, control, and confidence on any terrain, Diverge is the most capable gravel bike ever made. Switching from Midwest gravel at Mach 5 to rutted single track with ease, nothing helps you escape faster than Diverge.
-              a.button(href='') Đăng Ký Tư Vấn
+              a.button(href='https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation', target="_blank") Đăng Ký Tư Vấn
         .swiper-slide
-          .swiper-image(style="background: url('https://www.specialized.com/medias/07-ROAD-3300-TarmacStory-Hero-Handling-2800x1620.jpg?context=bWFzdGVyfGltYWdlc3w3MTc5NDN8aW1hZ2UvanBlZ3xpbWFnZXMvaDBmL2g4Yi85MTc1MzM1NTAxODU0LmpwZ3w0MDc5MjI3Y2QyMGFkMjVmN2NjMzVkN2U1YzJkNmE3N2Y0YWQ0ODIxNjVkYjhjODg1OGFjMjUzNGQxYjQ3ZTg2') no-repeat center center; background-size:cover;")
+          .swiper-image(style="background: url(../assets/images/banner01.png) no-repeat center center; background-size:cover;")
           .overlay
           .content-wrapper.content-right
             .content
               h1 ONE BIKE TO RULE THEM ALL
               p
                 | Morph Sagan’s superhuman speed with Alaphilippe’s climbing power and you’ve got the Tarmac SL7. The bike that knows no compromise. Climb on the lightest bike the rules allow, sprint on the fastest – all with legendary Tarmac handling. The only choice you need to make is when to attack.
-              a.button(href='') Đăng Ký Tư Vấn
-        .swiper-slide
-          .swiper-image(style="background: url('	https://www.specialized.com/medias/10-MTB-2197-EvoCarousel-2880x1620-01.jpg?context=bWFzdGVyfGltYWdlc3w5OTM3Mzd8aW1hZ2UvanBlZ3xpbWFnZXMvaGMxL2g4Zi85MTU2MTg5NDg3MTM0LmpwZ3w4OTBmZmI4OGNiNjYyNDNjOTA0MTJkYmUwNjhlOTE5MWZkOWMyMTNiMGYyMzZhMDM3YWVkOTA3ZmFmYmY0ZWRm') no-repeat right center; background-size:cover;")
-          .overlay
-          .content-wrapper
-            .content
-              h1 THINK FASTEST
-              p
-                | You’re looking at the fastest XC bikes in the world. Building on the legacy of the winningest full suspension XC bike in history, these freshly redesigned Epics deliver an unmatched combination of pedaling efficiency, light weight and control.
-              a.button(href='') Đăng Ký Tư Vấn
+              a.button(href='https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation', target="_blank") Đăng Ký Tư Vấn
+        
       .swiper-pagination
       .swiper-nav-wrapper
         .swiper-button-prev
@@ -78,58 +70,65 @@ block container
   .l-container
     .c-message
       .c-message_inner
-        p We are a group of professional estate planners and insurance specialists. We are passionate about helping you build generational
+        p WE MAKE MONEY WORK IN YOUR FAVOR
     .c-solution
       .c-solution_inner
         h3 Our Solution
         ul
           li
-            .c-solution_tag Bảo Hiểm Đầu Tư
-            .c-solution_name Hành Trình Hạnh Phúc
+            //- .c-solution_tag Tax Planning
+            .c-solution_name Tax Planning
             .c-solution_icon
               img.lazy(data-src=path+"assets/images/crop.png")
-            .c-solution_extra Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống
+            .c-solution_extra Analyze financial plans and offer the best solutions for customers to get maximum tax reduction for income, financial investment, insurance
           li
-            .c-solution_tag Bảo Hiểm Đầu Tư
-            .c-solution_name Hành Trình Hạnh Phúc
+            //- .c-solution_tag Retirement Planning
+            .c-solution_name Retirement Planning
             .c-solution_icon
               img.lazy(data-src=path+"assets/images/crop.png")
-            .c-solution_extra Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống
+            .c-solution_extra Secure your future high quality retirement with High Annual Income and Tax Free Retirement
           li
-            .c-solution_tag Bảo Hiểm Đầu Tư
-            .c-solution_name Hành Trình Hạnh Phúc
+            //- .c-solution_tag Estate Planning
+            .c-solution_name Estate Planning
             .c-solution_icon
               img.lazy(data-src=path+"assets/images/crop.png")
-            .c-solution_extra Xây dựng kế hoạch tài chính trọn đời, linh hoạt bảo vệ trên mọi hành trình của cuộc sống
+            .c-solution_extra Step-by-step helping clients make a sensible legacy plan for each of their loved ones
     .c-button
       a.c-button_inner.bounceIn(href="#")
           p Bạn có muốn làm chủ tương lai?
           p Đừng ngần ngại tìm hiểu cùng Jolie!
     .c-trust
         h3 Có 1000+ khách hàng đã lựa chọn đồng hành cùng Jolie, bởi vì:
-        p  had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no
+        p  Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.
         ul
          li
           .c-trust_icon
             img.lazy(data-src=path+"assets/images/crop.png")
-          h3 Compare Quotes
-          p Compare life insurance quotes with no obligation to buy.
+          h3 Trusted Partners
+          p Jolie's agent and team contract with many reputable financial companies in the market to bring you the best products
          li
           .c-trust_icon
             img.lazy(data-src=path+"assets/images/crop.png")
-          h3 Compare Quotes
-          p Compare life insurance quotes with no obligation to buy.
+          h3 #1 Customer Service
+          p Jolie has always had the ideal of giving and serving, so Jolie always strives to bring satisfaction and the best experience to customers from the first time they meet.
          li
           .c-trust_icon
             img.lazy(data-src=path+"assets/images/crop.png")
-          h3 Compare Quotes
-          p Compare life insurance quotes with no obligation to buy.
+          h3 Professional
+          p Professional process and a team of rich professionals are always ready to advise and support customers on any insurance-related issues.
+         li
+          .c-trust_icon
+            img.lazy(data-src=path+"assets/images/crop.png")
+          h3 Best Offer 
+          p Thoroughly learn about the wishes and capabilities of the customer to come up with the most suitable and optimal financial fund for the customer's needs.
+            | To enable screen reader support, press Ctrl+Alt+Z To learn about keyboard shortcuts, press Ctrl+slash
     .c-boss
       .c-boss_img
-        img.lazy(data-src="https://api.lorem.space/image/fashion?w=400&h=500", alt="")
+        img.lazy(data-src="https://api.lorem.space/image/fashion?w=400&h=400", alt="")
       .c-boss_content
         h3 Giới Thiệu
-        p JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life. With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of life insurance. From college funding, retirement saving plan, income protection to living benefits, what life insurance can do is not only to protect you and your loved one during the toughest moment but also to improve significantly the quality of life while you are still living.
+        p JOLIE PHAN - JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life.
+        p With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of tax free retirement
       ul
         li
             img.lazy(data-src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
@@ -168,7 +167,7 @@ block container
             p  To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.
 
 
-    .c-contact 
+    .c-contact.d-none
       ul 
         li 
           h3 Đăng ký dịch vụ Marketing 
