--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -44,7 +44,7 @@ block container
     .swiper
       .swiper-wrapper
         .swiper-slide
-          .swiper-image(style="background: url(../assets/images/banner01.png) no-repeat right bottom; background-size:cover;")
+          .swiper-image(style="background: url(../../assets/images/banner01.png) no-repeat right bottom; background-size:cover;")
           .overlay
           .content-wrapper
             .content
@@ -53,7 +53,7 @@ block container
                 | With speed, control, and confidence on any terrain, Diverge is the most capable gravel bike ever made. Switching from Midwest gravel at Mach 5 to rutted single track with ease, nothing helps you escape faster than Diverge.
               a.button(href='https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation', target="_blank") Đăng Ký Tư Vấn
         .swiper-slide
-          .swiper-image(style="background: url(../assets/images/banner01.png) no-repeat center center; background-size:cover;")
+          .swiper-image(style="background: url(../../assets/images/banner01.png) no-repeat center center; background-size:cover;")
           .overlay
           .content-wrapper.content-right
             .content
