--- a/root/scss/2_component/_09_other.scss
+++ b/root/scss/2_component/_09_other.scss
@@ -184,8 +184,25 @@
 			margin: 1rem -15px;
 		}
 		li{
-			width: 25%;
-			padding: 15px;
+			// width: 25%;
+			// padding: 15px;
+		}
+	}
+	.swiper-user{
+		width: 100%;
+		max-width: 100vw;
+		@include sp{
+			max-width: 90vw;
+		}
+		margin: 3rem 0;
+		.owl-theme {
+			@include flex-center;
+			overflow: hidden;
+			.item{
+				img{
+					object-fit: cover;
+				}
+			}
 		}
 	}
 }
