--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -8,10 +8,11 @@ block vars
   -path         = ''
 block before_page
   link(rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css")
-  //link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js")
+  link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css")
+  link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css")
 block after_page
   script(src="https://unpkg.com/swiper@8/swiper-bundle.min.js")
-  //script(src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js")
   script.
     const swiper = new Swiper(".swiper", {
       direction: "horizontal",
@@ -25,6 +26,19 @@ block after_page
         nextEl: ".swiper-button-next",
         prevEl: ".swiper-button-prev"
       }
+    });
+    $('.owl-carousel').owlCarousel({
+    loop:true,
+    margin: 20,
+    nav: false,
+    responsive:{
+        0:{
+            items:2
+        },
+        768:{
+            items:4
+        }
+    }
     });
 block container
   .c-swiper
@@ -116,15 +130,26 @@ block container
         h3 About JOLIE PHAN
         p JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life.
         p With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of tax free retirement
-      ul
-        li
-            img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
-        li
-            img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
-        li
-            img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
-        li
-            img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+      .swiper-user
+        .owl-carousel.owl-theme
+          .item
+              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+          .item
+              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+          .item
+              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+          .item
+              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+          .item
+              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+          .item
+              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+          .item
+              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+          .item
+              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+        .swiper-button-prev
+        .swiper-button-next
     .c-video
         h3 Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?
         ul
