--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -30,7 +30,7 @@ block after_page
     $('.owl-carousel').owlCarousel({
     loop:true,
     margin: 20,
-    nav: false,
+    nav: true,
     responsive:{
         0:{
             items:2
@@ -148,8 +148,6 @@ block container
               img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
           .item
               img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
-        .swiper-button-prev
-        .swiper-button-next
     .c-video
         h3 Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?
         ul
