--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -31,6 +31,8 @@ block after_page
     loop:true,
     margin: 20,
     nav: true,
+    lazyLoad:true,
+    navText: ["<img src='../../assets/images/back.png'>","<img src='../../assets/images/next.png'>"],
     responsive:{
         0:{
             items:2
@@ -133,45 +135,45 @@ block container
       .swiper-user
         .owl-carousel.owl-theme
           .item
-              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+              img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5387.jpg", src=path+"assets/images/794A5387.jpg", alt="")
           .item
-              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5387_z.jpg", src=path+"assets/images/794A5387_z.jpg", alt="")
           .item
-              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5562.jpg", src=path+"assets/images/794A5562.jpg", alt="")
           .item
-              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+               img.lazyload.owl-lazy(loading="lazy",data-src=path+"assets/images/beauty_20210828121805.jpg", src=path+"assets/images/beauty_20210828121805.jpg", alt="")
           .item
-              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+              img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5387.jpg", src=path+"assets/images/794A5387.jpg", alt="")
           .item
-              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5387_z.jpg", src=path+"assets/images/794A5387_z.jpg", alt="")
           .item
-              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5562.jpg", src=path+"assets/images/794A5562.jpg", alt="")
           .item
-              img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=300&h=250" src="https://api.lorem.space/image/fashion?w=300&h=250", alt="")
+               img.lazyload.owl-lazy(loading="lazy",data-src=path+"assets/images/beauty_20210828121805.jpg", src=path+"assets/images/beauty_20210828121805.jpg", alt="")
     .c-video
-        h3 Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?
+        h3 What our customers say about us
         ul
           li
-            iframe( loading="lazy" src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+            iframe.lazyload( loading="lazy" src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
           li
-            iframe( loading="lazy" src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+            iframe.lazyload( loading="lazy" src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 
     .c-user
-      h3 Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?
+      //- h3 Khách hàng nói gì về Công ty <br> Marketing Online TP. HCM - FIEX?
       .c-user_inner
         .c-user_list.user-slider
           .c-user_item
             .c-user_img
-                img.lazyload( loading="lazy", data-src="https://api.lorem.space/image/fashion?w=250&h=250" src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
-            h4 Diễn viên hài
-            p  To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.
+                img.lazyload( loading="lazy", data-src=path+"assets/images/PXL_20210316_011135625.jpg" src=path+"assets/images/PXL_20210316_011135625.jpg", alt="")
+            h4 Lan Nguyen
+            p  Jolie helped me get the best insurance profile ever. She is always friendly and very reliable.
           .c-user_item
             .c-user_img
-                img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=250&h=250" src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
-            h4 Diễn viên hài
-            p  To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.
+                img.lazyload(loading="lazy", data-src=path+"assets/images/dr-terry-truong.jpg" src=path+"assets/images/dr-terry-truong.jpg", alt="")
+            h4 DR Terry Trương
+            p  Thanks to my aunt's introduction, I got to know Jolie and was supported by her retirement insurance. I am very satisfied with Jolie's service.
           .c-user_item
             .c-user_img
-                img.lazyload(loading="lazy", data-src="https://api.lorem.space/image/fashion?w=250&h=250" src="https://api.lorem.space/image/fashion?w=250&h=250", alt="")
-            h4 Diễn viên hài
-            p  To correctly display the controls based on the user role, we will add a condition to check if the connected user is a viewer or stage for these two buttons.
+                img.lazyload(loading="lazy", data-src=path+"assets/images/beauty_20210518144219.jpg" src=path+"assets/images/beauty_20210518144219.jpg", alt="")
+            h4 Trinh Nguyen
+            p  I do nails so I am very worried about my health and future. So I reached out to Jolie for advice on a retirement plan. She helped me a lot and gave me the best retirement package. Sincere thanks to Jolie and team
