--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -106,22 +106,22 @@ block container
         ul
          li
           .c-trust_icon
-            img.lazyload(loading="lazy", data-src=path+"assets/images/crop.png" src=path+"assets/images/crop.png")
+            img.lazyload(loading="lazy", data-src=path+"assets/images/shield.png" src=path+"assets/images/shield.png")
           h3 Trusted Partners
           p Jolie's agent and team contract with many reputable financial companies in the market to bring you the best products
          li
           .c-trust_icon
-            img.lazyload(loading="lazy", data-src=path+"assets/images/crop.png" src=path+"assets/images/crop.png")
+            img.lazyload(loading="lazy", data-src=path+"assets/images/customer-service.png" src=path+"assets/images/customer-service.png")
           h3 #1 Customer Service
           p Jolie has always had the ideal of giving and serving, so Jolie always strives to bring satisfaction and the best experience to customers from the first time they meet.
          li
           .c-trust_icon
-            img.lazyload(loading="lazy", data-src=path+"assets/images/crop.png" src=path+"assets/images/crop.png")
+            img.lazyload(loading="lazy", data-src=path+"assets/images/badge.png" src=path+"assets/images/badge.png")
           h3 Professional
           p Professional process and a team of rich professionals are always ready to advise and support customers on any insurance-related issues.
          li
           .c-trust_icon
-            img.lazyload(loading="lazy", data-src=path+"assets/images/crop.png" src=path+"assets/images/crop.png")
+            img.lazyload(loading="lazy", data-src=path+"assets/images/best-seller.png" src=path+"assets/images/best-seller.png")
           h3 Best Offer
           p Thoroughly learn about the wishes and capabilities of the customer to come up with the most suitable and optimal financial fund for the customer's needs.
             | To enable screen reader support, press Ctrl+Alt+Z To learn about keyboard shortcuts, press Ctrl+slash
@@ -139,24 +139,28 @@ block container
           .item
                img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5387_z0.jpg", src=path+"assets/images/794A5387_z0.jpg", alt="")
           .item
-               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5562pp.jpg", src=path+"assets/images/794A5562pp.jpg", alt="")
+               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5186-min.jpg", src=path+"assets/images/794A5186-min.jpg", alt="")
           .item
-               img.lazyload.owl-lazy(loading="lazy",data-src=path+"assets/images/beauty_20210828121805.jpg", src=path+"assets/images/beauty_20210828121805.jpg", alt="")
+               img.lazyload.owl-lazy(loading="lazy",data-src=path+"assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg", src=path+"assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg", alt="")
+          .item
+              img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/IMG_8459-Edit-Edit-1-min.jpg", src=path+"assets/images/IMG_8459-Edit-Edit-1-min.jpg", alt="")
           .item
               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5387.jpg", src=path+"assets/images/794A5387.jpg", alt="")
           .item
                img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5387_z0.jpg", src=path+"assets/images/794A5387_z0.jpg", alt="")
           .item
-               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5562pp.jpg", src=path+"assets/images/794A5562pp.jpg", alt="")
+               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5186-min.jpg", src=path+"assets/images/794A5186-min.jpg", alt="")
           .item
-               img.lazyload.owl-lazy(loading="lazy",data-src=path+"assets/images/beauty_20210828121805.jpg", src=path+"assets/images/beauty_20210828121805.jpg", alt="")
+               img.lazyload.owl-lazy(loading="lazy",data-src=path+"assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg", src=path+"assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg", alt="")
+          .item
+              img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/IMG_8459-Edit-Edit-1-min.jpg", src=path+"assets/images/IMG_8459-Edit-Edit-1-min.jpg", alt="")
     .c-video
         h3 What our customers say about us
         ul
           li
-            iframe.lazyload( loading="lazy" src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+            iframe.lazyload( loading="lazy" src='https://www.youtube.com/embed/Sp7MkwNVWPE' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
           li
-            iframe.lazyload( loading="lazy" src='https://www.youtube.com/embed/CXE5hkd0XLw' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+            iframe.lazyload( loading="lazy" src='https://www.youtube.com/embed/flGKab64l9M' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 
     .c-user
       .c-user_inner
