--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -139,7 +139,7 @@ block container
           .item
                img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5387_z0.jpg", src=path+"assets/images/794A5387_z0.jpg", alt="")
           .item
-               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5186-min.jpg", src=path+"assets/images/794A5186-min.jpg", alt="")
+               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/user01.jpg", src=path+"assets/images/user01.jpg", alt="")
           .item
                img.lazyload.owl-lazy(loading="lazy",data-src=path+"assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg", src=path+"assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg", alt="")
           .item
@@ -149,7 +149,7 @@ block container
           .item
                img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5387_z0.jpg", src=path+"assets/images/794A5387_z0.jpg", alt="")
           .item
-               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/794A5186-min.jpg", src=path+"assets/images/794A5186-min.jpg", alt="")
+               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/user01.jpg", src=path+"assets/images/user01.jpg", alt="")
           .item
                img.lazyload.owl-lazy(loading="lazy",data-src=path+"assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg", src=path+"assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg", alt="")
           .item
