--- a/root/scss/2_component/_09_other.scss
+++ b/root/scss/2_component/_09_other.scss
@@ -7,10 +7,9 @@
 	&_inner{
 		padding: 2rem 8%;
 		border-radius: 15px;
-		background-color: #1da1f2;
-		@include min(900px){
-			max-width: 80vw;
-		}
+		background-color: #01395e;
+		max-width: 500px;
+    	width: 100vw;
 		p{
 			font-size: 2.5rem;
 			line-height: 1.3;
@@ -23,10 +22,37 @@
 	}
 }
 .c-solution{
-	margin: 5rem 0;
+	background-color: #f5f8fa;
+	margin: 5rem 0 0;
+	padding: 5rem 0;
 	&_inner{
 		h3{
 			@include ttl3;
+		}
+		.content{
+			text-align: left;
+			max-width: 800px;
+			margin: 3rem auto;
+			p{
+				font-weight: 400;
+				font-size: 1.5rem;
+			}
+			.btn{
+				@include flex-center;
+				a{
+					padding: 10px 30px;
+					color: white;
+					background-color: #ee680f;
+					border-radius: 8px;
+					margin: 2rem;
+					text-decoration: none;
+					&:nth-last-of-type(1){
+						background-color: white;
+						border: 1px solid #ee680f;
+						color: #ee680f
+					}
+				}
+			}
 		}
 		ul{
 			@include flex-center;
@@ -35,12 +61,18 @@
 				width: calc(33.3% - 40px);
 				padding: 30px 20px;
 				margin: 3rem 20px;
+				border-radius: 15px;
 				background-color: #fff;
 				border: solid 1px #ededed;
 				align-self: stretch;
 				@include sp{
 					width: 100%;
 					margin: 1.5rem 0;
+				}
+				transition: 0.3 ease-out;
+				&:hover{
+					box-shadow: 0 10px 50px -5px rgba(51, 71, 91, 0.12);
+    				transform: scale(1.02);
 				}
 			}
 		}
@@ -65,21 +97,26 @@
 		margin: 3rem 0;
 	}
 	&_extra{
-		font-size: 2.5rem;
+		font-size: 1.5rem;
 		font-weight: 400;
 	}
 }
 .c-button{
 	@include flex-center;
 	text-align: center;
-	margin: 3rem 0;
+	margin: 0 0 3rem;
+	width: 100%;
+	color: #fff;
+    background-color: #01395e;
+    text-align: center;
+    padding: 5rem 0;
 	&_inner{
-		background-color: #1da1f2;
+		// background-color: #1da1f2;
 		padding: 10px 100px;
 		border-radius: 20px;
 		text-decoration: none;
 		color: #ededed;
-		font-size: 2rem;
+		font-size: 2.5rem;
 		@include sp{
 			padding: 10px 30px;
 			font-size: 1.5rem;
@@ -156,12 +193,14 @@
 			font-size: 2.5rem;
 			line-height: 1.5;
 			position: relative;
-
+			margin-bottom: 2rem;
+			@include ttl3;
+			text-align: left;
 			&::after{
-				width: 40px;
-				background-color: #1da1f2;
+				width: 110px;
+				background-color: #ee680f;
 				content: '';
-				height: 3px;
+				height: 5px;
 				position: absolute;
 				left: 0;
 				bottom: 4px;
@@ -169,8 +208,9 @@
 		}
 		p{
 			font-size: 1.7rem;
-			line-height: 1.5;
+			line-height: 1.7;
 			font-weight: 400;
+			text-align: justify;
 		}
 		@include sp{
 			width: 100%;
@@ -247,17 +287,21 @@
 	}
 }
 .c-user{
-	margin: 3rem 0;
+	max-width: 100vw;
+	width: 1150px;
+	margin: 3rem auto 4rem;
+	.owl-carousel{
+		// max-width: 100vw;
+		// width: 100%;
+		// position: relative;
+		margin: 0 auto;
+	}
 	h3{
 		@include ttl3;
-	}
-	&_list{
-		@include flex-center;
-		align-items: flex-start;
-		flex-wrap: wrap;
+		margin-bottom: 2rem;
 	}
 	&_item{
-		width: 25%;
+		width: 370px;
 		padding: 20px 30px;
 		text-align: center;
 		h4{
@@ -274,8 +318,8 @@
 		}
 	}
 	&_img{
-		width: 200px;
-		height: 200px;
+		width: 150px;
+		height: 150px;
 		margin: 0 auto;
 		position: relative;
 		img{
@@ -308,6 +352,27 @@
 				width: 100%;
 			}
 		}
+	}
+}
+.c-quoue{
+	color: #fff;
+	background-color: #01395e;
+	text-align: center;
+	padding: 5rem 0;
+	width: 100%;
+	h3{
+		@include ttl3;
+		font-size: 3rem;
+	}
+	a{
+		background-color: #ee680f;
+		text-decoration: none;
+		border-radius: 15px;
+		color: white;
+		padding: 15px 30px;
+		display: block;
+		width: fit-content;
+		margin: 2rem auto;
 	}
 }
 @keyframes pulse_animation {
