--- a/root/pug/index.pug
+++ b/root/pug/index.pug
@@ -27,11 +27,14 @@ block after_page
         prevEl: ".swiper-button-prev"
       }
     });
-    $('.owl-carousel').owlCarousel({
+    $('.swiper-user .owl-carousel').owlCarousel({
     loop:true,
     margin: 20,
     nav: true,
+    dot:true,
     lazyLoad:true,
+    autoplay:true,
+    autoplayTimeout:3000,
     navText: ["<img src='../../assets/images/back.png'>","<img src='../../assets/images/next.png'>"],
     responsive:{
         0:{
@@ -39,6 +42,22 @@ block after_page
         },
         768:{
             items:4
+        }
+    }
+    });
+    $('.c-user .owl-carousel').owlCarousel({
+    loop:true,
+    margin: 20,
+    dots: true,
+    lazyLoad:true,
+    autoplay:true,
+    autoplayTimeout:3000,
+    responsive:{
+        0:{
+            items:1
+        },
+        768:{
+            items:3
         }
     }
     });
@@ -73,10 +92,16 @@ block container
   .l-container
     .c-message
       .c-message_inner
-        p WE MAKE MONEY <br> WORK IN YOUR FAVOR
-    .c-solution
+        p WE MAKE MONEY <br> WORK IN YOUR FAVOR   
+  .c-solution
+    .l-container
       .c-solution_inner
         h3 Insurance Solutions
+        .content
+          p HubSpot’s CRM platform has all the tools and integrations you need for marketing, sales, content management, and customer service. Each product in the platform is powerful alone, but the real magic happens when you use them together.
+          .btn
+            a(href) Get free CRM
+            a(href) Demo premium CRM
         ul
           li
             //- .c-solution_tag Tax Planning
@@ -96,10 +121,11 @@ block container
             .c-solution_icon
               img.lazyload(loading="lazy", width="70" height="70" data-src=path+"assets/images/home.png" src=path+"assets/images/home.png")
             .c-solution_extra Step-by-step helping clients make a sensible legacy plan for each of their loved ones
-    .c-button
-      a.c-button_inner.bounceIn(href="https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation", target="_blank")
-          p Bạn có muốn làm chủ tương lai?
-          p Đừng ngần ngại tìm hiểu cùng Jolie!
+  .c-button
+    a.c-button_inner.bounceIn(href="https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation", target="_blank")
+        p Bạn có muốn làm chủ tương lai?
+        p Đừng ngần ngại tìm hiểu cùng Jolie!
+  .l-container      
     .c-trust
         h3 There are 1000+ customers who have chosen to accompany Jolie, because:
         p  Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.
@@ -131,6 +157,7 @@ block container
       .c-boss_content
         h3 About JOLIE PHAN
         p JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life.
+        br
         p With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of tax free retirement
       .swiper-user
         .owl-carousel.owl-theme
@@ -154,29 +181,46 @@ block container
                img.lazyload.owl-lazy(loading="lazy",data-src=path+"assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg", src=path+"assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg", alt="")
           .item
               img.lazyload.owl-lazy(loading="lazy", data-src=path+"assets/images/IMG_8459-Edit-Edit-1-min.jpg", src=path+"assets/images/IMG_8459-Edit-Edit-1-min.jpg", alt="")
+    .c-user
+      h3 What our customers say about us
+      .owl-carousel.owl-theme
+        .c-user_item
+          .c-user_img
+              img.lazyload( loading="lazy", data-src=path+"assets/images/PXL_20210316_011135625.jpg" src=path+"assets/images/PXL_20210316_011135625.jpg", alt="")
+          h4 Lan Nguyen
+          p  Jolie helped me get the best insurance profile ever. She is always friendly and very reliable.
+        .c-user_item
+          .c-user_img
+              img.lazyload(loading="lazy", data-src=path+"assets/images/dr-terry-truong.jpg" src=path+"assets/images/dr-terry-truong.jpg", alt="")
+          h4 DR Terry Trương
+          p  Thanks to my aunt's introduction, I got to know Jolie and was supported by her retirement insurance. I am very satisfied with Jolie's service.
+        .c-user_item
+          .c-user_img
+              img.lazyload(loading="lazy", data-src=path+"assets/images/beauty_20210518144219.jpg" src=path+"assets/images/beauty_20210518144219.jpg", alt="")
+          h4 Trinh Nguyen
+          p  I do nails so I am very worried about my health and future. So I reached out to Jolie for advice on a retirement plan. She helped me a lot and gave me the best retirement package. Sincere thanks to Jolie and team
+        .c-user_item
+          .c-user_img
+              img.lazyload( loading="lazy", data-src=path+"assets/images/PXL_20210316_011135625.jpg" src=path+"assets/images/PXL_20210316_011135625.jpg", alt="")
+          h4 Lan Nguyen
+          p  Jolie helped me get the best insurance profile ever. She is always friendly and very reliable.
+        .c-user_item
+          .c-user_img
+              img.lazyload(loading="lazy", data-src=path+"assets/images/dr-terry-truong.jpg" src=path+"assets/images/dr-terry-truong.jpg", alt="")
+          h4 DR Terry Trương
+          p  Thanks to my aunt's introduction, I got to know Jolie and was supported by her retirement insurance. I am very satisfied with Jolie's service.
+        .c-user_item
+          .c-user_img
+              img.lazyload(loading="lazy", data-src=path+"assets/images/beauty_20210518144219.jpg" src=path+"assets/images/beauty_20210518144219.jpg", alt="")
+          h4 Trinh Nguyen
+          p  I do nails so I am very worried about my health and future. So I reached out to Jolie for advice on a retirement plan. She helped me a lot and gave me the best retirement package. Sincere thanks to Jolie and team
     .c-video
-        h3 What our customers say about us
         ul
           li
             iframe.lazyload( loading="lazy" src='https://www.youtube.com/embed/Sp7MkwNVWPE' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
           li
             iframe.lazyload( loading="lazy" src='https://www.youtube.com/embed/flGKab64l9M' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
-
-    .c-user
-      .c-user_inner
-        .c-user_list.user-slider
-          .c-user_item
-            .c-user_img
-                img.lazyload( loading="lazy", data-src=path+"assets/images/PXL_20210316_011135625.jpg" src=path+"assets/images/PXL_20210316_011135625.jpg", alt="")
-            h4 Lan Nguyen
-            p  Jolie helped me get the best insurance profile ever. She is always friendly and very reliable.
-          .c-user_item
-            .c-user_img
-                img.lazyload(loading="lazy", data-src=path+"assets/images/dr-terry-truong.jpg" src=path+"assets/images/dr-terry-truong.jpg", alt="")
-            h4 DR Terry Trương
-            p  Thanks to my aunt's introduction, I got to know Jolie and was supported by her retirement insurance. I am very satisfied with Jolie's service.
-          .c-user_item
-            .c-user_img
-                img.lazyload(loading="lazy", data-src=path+"assets/images/beauty_20210518144219.jpg" src=path+"assets/images/beauty_20210518144219.jpg", alt="")
-            h4 Trinh Nguyen
-            p  I do nails so I am very worried about my health and future. So I reached out to Jolie for advice on a retirement plan. She helped me a lot and gave me the best retirement package. Sincere thanks to Jolie and team
+  .c-quoue
+      .l-container
+        h3 Contact us for professional financial advice
+        a(href) Request a Quote
