--- a/root/scss/0_base/_reset.scss
+++ b/root/scss/0_base/_reset.scss
@@ -72,7 +72,7 @@ video {
 	border: 0;
 	outline: 0;
 	box-sizing: border-box;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Fira Sans', sans-serif;
 }
 
 article,
@@ -116,13 +116,12 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Fira Sans', sans-serif;
 	font-display: swap;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-weight: 500;
 }
-
 h1,
 h2,
 h3,
